Optimize UT.
