# server/core/swagger/v3.yaml
@@ -1433,7 +1433,7 @@ definitions:
       providers:
         type: array
         items:
-          $ref: '#/definitions/DependencyMicroService'
+          $ref: '#/definitions/DependencyKey'
       properties:
         $ref: '#/definitions/Properties'
       LBStrategy:
@@ -1536,12 +1536,12 @@ definitions:
     type: object
     properties:
       consumer:
-        $ref: '#/definitions/DependencyMicroService'
+        $ref: '#/definitions/DependencyKey'
       providers:
         type: array
         items:
-          $ref: '#/definitions/DependencyMicroService'
-  DependencyMicroService:
+          $ref: '#/definitions/DependencyKey'
+  DependencyKey:
     type: object
     required:
         - appId
